# swearjar

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  ccpp.yml  test.sh
.github/workflows/: build.yml  ccpp.yml  pr.yml
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/fortune-cookie/: CMakeLists.txt  fortune_window.cpp  fortune_window.h  main.cpp
examples/hello-world/: CMakeLists.txt  README.md  build.sh  main.cpp
examples/widget-test/: CMakeLists.txt  README.md  main.cpp
scripts/: build.sh  coverage.sh  docker.sh  format.sh  lint.sh
src/: CMakeLists.txt  app.cpp  app.h  button.cpp  button.h  checkbox.cpp  checkbox.h  collection_widget.cpp  collection_widget.h  curses_interface.h  curses_wrapper.cpp  curses_wrapper.h  dimension.h  frame.cpp  frame.h  label.cpp  label.h  layout_widget.cpp  layout_widget.h  list.cpp  list.h  logging.cpp  logging.h  panel.cpp  panel.h  progressbar.cpp  progressbar.h  radio_button.cpp  radio_button.h  render_context.cpp  render_context.h  screen.cpp  screen.h  swearjar.h  text_entry.cpp  text_entry.h  widget.cpp  widget.h  window.cpp  window.h
test/: CMakeLists.txt  button.test.cpp  checkbox.test.cpp  collection-widget.test.cpp  curses.mock.h  frame.test.cpp  label.test.cpp  layout_widget.test.cpp  list.test.cpp  logging.test.cpp  panel.test.cpp  progressbar.test.cpp  radio_button.test.cpp  render_context.mock.h  render_context.test.cpp  screen.test.cpp  text_entry.test.cpp  widget.test.cpp  window.test.cpp
